--- a/docs/docs/cmd/spo/list/list-view-add.mdx
+++ b/docs/docs/cmd/spo/list/list-view-add.mdx
@@ -63,8 +63,8 @@ m365 spo list view add [options]
 `--default`
 : View will be set as default view, if specified.
 
-`--paged`
-: View supports paging. Defaults to `true`.
+`--paged [paged]`
+: View supports paging. Valid values are `true`, `false`. Defaults to `true`.  
 
 `--rowLimit [rowLimit]`
 : Sets the number of items to display for the view. Default value is 30.
