Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,11 +16,16 @@ sidebar_position: 4
 
 - [spo file version keep](../cmd/spo/file/file-version-keep.mdx) - ensure that a specific file version will never expire [#6774](https://github.com/pnp/cli-microsoft365/issues/6774)
 
+**Entra ID:**
+
+- [entra roleassignment add](../cmd/entra/roleassignment/roleassignment-add.mdx) - assign a Entra ID role to a user and specify the scope for which the user has been granted access [#6563](https://github.com/pnp/cli-microsoft365/issues/6563)
+
 ### Changes
 
 - added CLI for Microsoft 365 MCP server guide [#6817](https://github.com/pnp/cli-microsoft365/pull/6817)
 - fixed dependabot updates
 - added additional platform options to [entra app add](../cmd/entra/app/app-add.mdx) command [6570](https://github.com/pnp/cli-microsoft365/issues/6570)
+- added Copilot instructions
 
 ### ⚠️ Breaking changes
 
@@ -32,6 +37,10 @@ sidebar_position: 4
  - removed `viva engage group` commands [#6285](https://github.com/pnp/cli-microsoft365/issues/6285)
  - removed deprecated commands [#6577](https://github.com/pnp/cli-microsoft365/issues/6577)
  - removed `pp card` commands [#6852](https://github.com/pnp/cli-microsoft365/issues/6852)
+ - updated `spfx project upgrade` shell option to default `powershell` [#6769](https://github.com/pnp/cli-microsoft365/issues/6769)
+ - fixed `spo serviceprincipal grant list` API issue [#6757](https://github.com/pnp/cli-microsoft365/issues/6757)
+ - updated `spo homesite` options and output [#6731](https://github.com/pnp/cli-microsoft365/issues/6731)
+ - removed deprecated aliases [#6532](https://github.com/pnp/cli-microsoft365/issues/6532)
 
 ## [v10.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.11.0)
 
