Moves 'spo tenant site' commands to 'spo site'. Closes #6879

--- a/docs/docs/cmd/spo/site/site-archive.mdx
+++ b/docs/docs/cmd/spo/site/site-archive.mdx
@@ -2,14 +2,14 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo tenant site archive
+# spo site archive
 
 Archives a site collection
 
 ## Usage
 
 ```sh
-m365 spo tenant site archive [options]
+m365 spo site archive [options]
 ```
 
 ## Options
@@ -44,13 +44,13 @@ After running this command, it may take a few minutes for the site to be fully a
 Archive a specific SharePoint site collection
 
 ```sh
-m365 spo tenant site archive --url "https://contoso.sharepoint.com/sites/Marketing"
+m365 spo site archive --url "https://contoso.sharepoint.com/sites/Marketing"
 ```
 
 Archive a specific SharePoint site collection without confirmation prompt
 
 ```sh
-m365 spo tenant site archive --url "https://contoso.sharepoint.com/sites/Marketing" --force
+m365 spo site archive --url "https://contoso.sharepoint.com/sites/Marketing" --force
 ```
 
 ## Response
