--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -183,7 +183,7 @@ v9 command | v10 command
 `entra group user list` | [entra group member list](./cmd/entra/group/group-member-list.mdx)
 `entra group user set` | [entra group member set](./cmd/entra/group/group-member-set.mdx)
 `spo folder rename` | [spo folder set](./cmd/spo/folder/folder-set.mdx)
-`spo site rename` | [spo tenant site rename](./cmd/spo/tenant/tenant-site-rename.mdx)
+`spo site rename` | spo tenant site rename
 `yammer search` | [viva engage search](./cmd/viva/engage/engage-search.mdx)
 `yammer group list` | viva engage group list
 `yammer group user add` | viva engage group user add
