--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -213,6 +213,22 @@ Command | Alternative
 `viva engage group user add` | [viva engage community user add](./cmd/viva/engage/engage-community-user-add.mdx)
 `viva engage group user remove` | [viva engage community user remove](./cmd/viva/engage/engage-community-user-remove.mdx)
 
+### Aligned command names
+
+Some command names have been updated to reflect the latest Microsoft 365 terminology. Additionally, command improvements sometimes lead to renaming for better functionality alignment.
+
+v10 command | v11 command
+--- | ---
+`spo tenant site archive` | [spo site archive](./cmd/spo/site/site-archive.mdx)
+`spo tenant site list` | [spo site list](./cmd/spo/site/site-list.mdx)
+`spo tenant site membership list` | [spo site membership list](./cmd/spo/site/site-membership-list.mdx)
+`spo tenant site rename` | [spo site rename](./cmd/spo/site/site-rename.mdx)
+`spo tenant site unarchive` | [spo site unarchive](./cmd/spo/site/site-unarchive.mdx)
+
+#### What action do I need to take?
+
+Update your scripts to use the new command names listed.
+
 ### Aligned naming options
 
 Just like with command names, we also have to rename options to reflect the changes in the product. We also try to make the options more descriptive and clearer to make it easier for you to use the CLI.
