--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -78,7 +78,7 @@ sidebar_position: 4
 - updated [spo serviceprincipal permissionrequest list](../cmd/spo/serviceprincipal/serviceprincipal-permissionrequest-list.mdx) command where the output was not consistent [#6788](https://github.com/pnp/cli-microsoft365/pull/6788)
 - updated [spo site appcatalog list](../cmd/spo/site/site-appcatalog-list.mdx) command with ability to ignore deleted sites [#6794](https://github.com/pnp/cli-microsoft365/pull/6794)
 - updated `spo page section` commands to support vertical sections [#6743](https://github.com/pnp/cli-microsoft365/pull/6743)
-- updated [spo tenant site unarchive](../cmd/spo/tenant/tenant-site-unarchive.mdx) warning prompt [#6753](https://github.com/pnp/cli-microsoft365/pull/6753)
+- updated `spo tenant site unarchive` warning prompt [#6753](https://github.com/pnp/cli-microsoft365/pull/6753)
 - updated [spfx project doctor](../cmd/spfx/project/project-doctor.mdx) command to check the Typescript version of the project [#6716](https://github.com/pnp/cli-microsoft365/issues/6716)
 - updated [entra group member add](../cmd/entra/group/group-member-add.mdx) command to support adding subgroups [#6480](https://github.com/pnp/cli-microsoft365/issues/6480)
 - updated [spo file version list](../cmd/spo/file/file-version-list.mdx) and [spo file version get](../cmd/spo/file/file-version-get.mdx) response to include `ExpirationDate` property [#6773](https://github.com/pnp/cli-microsoft365/issues/6773)
@@ -431,7 +431,7 @@ sidebar_position: 4
 **SharePoint:**
 
 - [spo page publish](../cmd/spo/page/page-publish.mdx) - publishes a modern page [#6420](https://github.com/pnp/cli-microsoft365/issues/6420)
-- [spo tenant site membership list](../cmd/spo/tenant/tenant-site-membership-list.mdx) - retrieves information about default site groups' membership [#5980](https://github.com/pnp/cli-microsoft365/issues/5980)
+- `spo tenant site membership list` - retrieves information about default site groups' membership [#5980](https://github.com/pnp/cli-microsoft365/issues/5980)
 - [spo folder sharinglink set](../cmd/spo/folder/folder-sharinglink-set.mdx) - updates a specific sharing link of a folder [#5964](https://github.com/pnp/cli-microsoft365/issues/5964)
 
 **SharePoint Premium:**
@@ -454,7 +454,7 @@ sidebar_position: 4
 - enhanced [spo list remove](../cmd/spo/list/list-remove.mdx) command with `--recylce` flag [#6270](https://github.com/pnp/cli-microsoft365/issues/6270)
 - enhanced [spo file remove](../cmd/spo/file/file-remove.mdx) command with `--bypassSharedLock` flag [#6313](https://github.com/pnp/cli-microsoft365/issues/6313)
 - updated 'spo userprofile get' command docs.
-- adds alias for [spo tenant site list](../cmd/spo/tenant/tenant-site-list.mdx) command [#6143](https://github.com/pnp/cli-microsoft365/issues/6143)
+- adds alias for `spo tenant site list` command [#6143](https://github.com/pnp/cli-microsoft365/issues/6143)
 
 ### ⚠️ Breaking changes
 
@@ -478,7 +478,7 @@ sidebar_position: 4
 - enhanced the output of [spo sitescript get](../cmd/spo/sitescript/sitescript-get.mdx) command [#5559](https://github.com/pnp/cli-microsoft365/issues/5559)
 - updated [spo file move](../cmd/spo/file/file-move.mdx) options [#6153](https://github.com/pnp/cli-microsoft365/issues/6153)
 - updated purpose of option `displayName` for [entra m365group set](../cmd/entra/m365group/m365group-set.mdx) command [#6146](https://github.com/pnp/cli-microsoft365/issues/6146)
-- renamed command `spo site rename` to [spo tenant site rename](../cmd/spo/tenant/tenant-site-rename.mdx) [#6142](https://github.com/pnp/cli-microsoft365/issues/6142)
+- renamed command `spo site rename` to `spo tenant site rename` [#6142](https://github.com/pnp/cli-microsoft365/issues/6142)
 - removed `cli reconsent` command [#6360](https://github.com/pnp/cli-microsoft365/issues/6360)
 - ensured empty result output for various list commands [#6288](https://github.com/pnp/cli-microsoft365/issues/6288)
 - removed deprecated `userName` option from [entra m365group user add](../cmd/entra/m365group/m365group-user-add.mdx) command [#6218](https://github.com/pnp/cli-microsoft365/issues/6218)
@@ -641,8 +641,8 @@ sidebar_position: 4
 
 **SharePoint:**
 
-- [spo tenant site archive](../cmd/spo/tenant/tenant-site-archive.mdx) - archives a site collection [#6018](https://github.com/pnp/cli-microsoft365/issues/6018)
-- [spo tenant site unarchive](../cmd/spo/tenant/tenant-site-unarchive.mdx) - unarchives a site collection [#6019](https://github.com/pnp/cli-microsoft365/issues/6019)
+- `spo tenant site archive` - archives a site collection [#6018](https://github.com/pnp/cli-microsoft365/issues/6018)
+- `spo tenant site unarchive` - unarchives a site collection [#6019](https://github.com/pnp/cli-microsoft365/issues/6019)
 - [spo site admin list](../cmd/spo/site/site-admin-list.mdx) - lists all administrators of a specific SharePoint site [#5882](https://github.com/pnp/cli-microsoft365/issues/5882)
 
 **Teams:**
@@ -3486,7 +3486,7 @@ sidebar_position: 4
 **SharePoint:**
 
 - [spo feature disable](../cmd/spo/feature/feature-disable.mdx) - disables feature for the specified site or web [#676](https://github.com/pnp/cli-microsoft365/issues/676)
-- [spo site rename](../cmd/spo/tenant/tenant-site-rename.mdx) - renames the URL and title of a site collection [#1197](https://github.com/pnp/cli-microsoft365/issues/1197)
+- [spo site rename](../cmd/spo/site/site-rename.mdx) - renames the URL and title of a site collection [#1197](https://github.com/pnp/cli-microsoft365/issues/1197)
 
 **Yammer:**
 
@@ -4275,7 +4275,7 @@ sidebar_position: 4
 - added information about the current user to status commands [#202](https://github.com/pnp/cli-microsoft365/issues/202)
 - fixed issue with completing input that doesn't match commands [#222](https://github.com/pnp/cli-microsoft365/issues/222)
 - fixed issue with escaping numeric input [#226](https://github.com/pnp/cli-microsoft365/issues/226)
-- changed the [entra oauth2grant list](../cmd/entra/oauth2grant/oauth2grant-list.mdx), [spo app list](../cmd/spo/app/app-list.mdx), [spo customaction list](../cmd/spo/customaction/customaction-list.mdx), [spo site list](../cmd/spo/tenant/tenant-site-list.mdx) commands to list all properties for output type JSON [#232](https://github.com/pnp/cli-microsoft365/issues/232), [#233](https://github.com/pnp/cli-microsoft365/issues/233), [#234](https://github.com/pnp/cli-microsoft365/issues/234), [#235](https://github.com/pnp/cli-microsoft365/issues/235)
+- changed the [entra oauth2grant list](../cmd/entra/oauth2grant/oauth2grant-list.mdx), [spo app list](../cmd/spo/app/app-list.mdx), [spo customaction list](../cmd/spo/customaction/customaction-list.mdx), [spo site list](../cmd/spo/site/site-list.mdx) commands to list all properties for output type JSON [#232](https://github.com/pnp/cli-microsoft365/issues/232), [#233](https://github.com/pnp/cli-microsoft365/issues/233), [#234](https://github.com/pnp/cli-microsoft365/issues/234), [#235](https://github.com/pnp/cli-microsoft365/issues/235)
 - fixed issue with generating clink completion file [#252](https://github.com/pnp/cli-microsoft365/issues/252)
 - added [user guide](../user-guide/installing-cli.mdx) [#236](https://github.com/pnp/cli-microsoft365/issues/236), [#237](https://github.com/pnp/cli-microsoft365/issues/237), [#238](https://github.com/pnp/cli-microsoft365/issues/238), [#239](https://github.com/pnp/cli-microsoft365/issues/239)
 
@@ -4291,7 +4291,7 @@ sidebar_position: 4
 
 - [spo customaction list](../cmd/spo/customaction/customaction-list.mdx) - lists user custom actions for site or site collection [#19](https://github.com/pnp/cli-microsoft365/issues/19)
 - [spo site get](../cmd/spo/site/site-get.mdx) - gets information about the specific site collection [#114](https://github.com/pnp/cli-microsoft365/issues/114)
-- [spo site list](../cmd/spo/tenant/tenant-site-list.mdx) - lists modern sites of the given type [#115](https://github.com/pnp/cli-microsoft365/issues/115)
+- [spo site list](../cmd/spo/site/site-list.mdx) - lists modern sites of the given type [#115](https://github.com/pnp/cli-microsoft365/issues/115)
 - [spo site add](../cmd/spo/site/site-add.mdx) - creates new modern site [#116](https://github.com/pnp/cli-microsoft365/issues/116)
 - [spo app remove](../cmd/spo/app/app-remove.mdx) - removes the specified app from the tenant app catalog [#9](https://github.com/pnp/cli-microsoft365/issues/9)
 - [spo site appcatalog add](../cmd/spo/site/site-appcatalog-add.mdx) - creates a site collection app catalog in the specified site [#63](https://github.com/pnp/cli-microsoft365/issues/63)
