--- a/docs/docs/cmd/spo/site/site-unarchive.mdx
+++ b/docs/docs/cmd/spo/site/site-unarchive.mdx
@@ -2,14 +2,14 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# spo tenant site unarchive
+# spo site unarchive
 
 Unarchives a site collection
 
 ## Usage
 
 ```sh
-m365 spo tenant site unarchive [options]
+m365 spo site unarchive [options]
 ```
 
 ## Options
@@ -49,13 +49,13 @@ After running this command, it may take a few minutes for the site to be fully r
 Unarchive a specific site collection.
 
 ```sh
-m365 spo tenant site unarchive --url "https://contoso.sharepoint.com/sites/Marketing"
+m365 spo site unarchive --url "https://contoso.sharepoint.com/sites/Marketing"
 ```
 
 Unarchive a specific site collection without confirmation prompt.
 
 ```sh
-m365 spo tenant site unarchive --url "https://contoso.sharepoint.com/sites/Marketing" --force
+m365 spo site unarchive --url "https://contoso.sharepoint.com/sites/Marketing" --force
 ```
 
 ## Response
