Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -26,6 +26,11 @@ sidebar_position: 4
 - fixed dependabot updates
 - added additional platform options to [entra app add](../cmd/entra/app/app-add.mdx) command [6570](https://github.com/pnp/cli-microsoft365/issues/6570)
 - added Copilot instructions
+- migrated 'entra administrativeunit list' to Zod. [6810](https://github.com/pnp/cli-microsoft365/issues/6810)
+- migrated 'entra administrative unit get' to Zod. [6809](https://github.com/pnp/cli-microsoft365/issues/6809)
+- migrated 'entra administrativeunit remove' to Zod. [6812](https://github.com/pnp/cli-microsoft365/issues/6812)
+- migrated 'entra administrativeunit add' to Zod. [6814](https://github.com/pnp/cli-microsoft365/issues/6814)
+- refactored how unknown options are configured for zod for some commands. [6889](https://github.com/pnp/cli-microsoft365/issues/6889)
 
 ### ⚠️ Breaking changes
 
